# QuickDraw

./: .gitignore  CMakeLists.txt
libs/glm/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/Backend/: Backend.h  Win32.cpp  Win32.h  Win32Core.cpp  Win32Core.h
src/Backend/Api/: CoreApiConcept.h
src/Ui/Component/: Element.h  Utils.h  Win32Window.cpp  Win32Window.h
src/Ui/Component/Api/: ElementApi.h  PositionChangedSubscriber.h  SizeChangedSubscriber.h
src/Utils/: Reactive.h
test/: CMakeLists.txt  mainTests.cpp
